--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,16 +10,14 @@ body {
   color: #ffffff;
 }
 
-
-
 .bg-div {
-  background: url("/assets/images/landing-bg-image.svg");
-  object-fit: contain;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/landing-bg-image.jpg");
+  object-fit: cover;
   background-repeat: no-repeat;
   width: 100vw;
 }
 
-.feat-div{
+.feat-div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,35 +28,34 @@ body {
   border-top: 8px solid #222222;
   width: 100%;
 
-  img{
+  img {
     width: 400px;
   }
 }
 
-.faq-div{
+.faq-div {
   padding-bottom: 0;
 }
 
-.contact-div{
+.contact-div {
   align-items: flex-start;
   color: #757575;
 }
 
-.mat-expansion-panel-header-title{
+.mat-expansion-panel-header-title {
   color: #ffffff;
 }
 
-.header{
-  p{
+.header {
+  p {
     padding: 0;
     margin: 0;
   }
   background-color: #303030 !important;
-  &:hover{
+  &:hover {
     background: #303030 !important;
   }
 }
-
 
 .mat-expansion-panel-body {
   margin-top: 1px;
@@ -66,9 +63,7 @@ body {
   color: #ffffff;
   line-height: 25px;
 
-  &:hover{
+  &:hover {
     background: #303030 !important;
   }
 }
-
-
