--- a/src/app/landing-page/landing/landing.component.html
+++ b/src/app/landing-page/landing/landing.component.html
@@ -115,7 +115,7 @@
       </div>
     </div>
 
-    <div class="feat-div contact-div">
+    <div class="flex flex-col gap-10 feat-div contact-div">
       <p class="text-base">Questions? Contact us.</p>
       <div class="grid grid-cols-2 gap-x-20 gap-y-2">
         <p>FAQ</p>
