fix:added breakline

--- a/src/app/landing-page/landing/landing.component.html
+++ b/src/app/landing-page/landing/landing.component.html
@@ -94,7 +94,7 @@
               <p class="text-lg">{{ faq.question }}</p>
             </mat-panel-title>
           </mat-expansion-panel-header>
-          <p class="text-lg py-[40px]">{{ faq.ans }}</p>
+          <p class="text-lg py-[40px] break-line">{{ faq.ans }}</p>
         </mat-expansion-panel>
       </mat-accordion>
       <p class="self-center text-center w-[70%]">Ready to watch? Enter your email to create or restart your membership.</p>
