--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@ body {
   color: #ffffff;
 }
 
+.break-line{
+  white-space: pre-line;
+}
+
 .bg-div {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/landing-bg-image.jpg");
   object-fit: cover;
