--- a/src/app/landing-page/landing/landing.component.html
+++ b/src/app/landing-page/landing/landing.component.html
@@ -83,58 +83,66 @@
   <div class="feat-div faq-div">
     <h1 class="text-3xl text-center">Frequently Asked Questions</h1>
   </div>
-    <div class="bg-[#000000] text-xl flex flex-col gap-5">
-      <mat-accordion hideToggle="false" [multi]="false">
-        <mat-expansion-panel
-          *ngFor="let faq of faqList; let i = index"
-          class="bg-[#000000] py-1"
-        >
-          <mat-expansion-panel-header class="header">
-            <mat-panel-title>
+  <div class="bg-[#000000] text-xl flex flex-col gap-5">
+    <mat-accordion hideToggle="true" [multi]="false">
+      <mat-expansion-panel
+        (opened)="panelOpenState = true"
+        (closed)="panelOpenState = false"
+        *ngFor="let faq of faqList; let i = index"
+        class="bg-[#000000] py-1"
+      >
+        <mat-expansion-panel-header class="header">
+          <mat-panel-title class="flex justify-between items-center gap-5">
               <p class="text-lg">{{ faq.question }}</p>
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <p class="text-lg py-[40px] break-line">{{ faq.ans }}</p>
-        </mat-expansion-panel>
-      </mat-accordion>
-      <p class="self-center text-center w-[70%]">Ready to watch? Enter your email to create or restart your membership.</p>
-      <div class="flex w-full flex-col gap-5 mb-[40px] items-center">
-        <input
-          class="px-3 py-4 text-lg text-black w-[90%]"
-          type="email"
-          placeholder="Email address"
-        />
-        <button
-          class="rounded-[3px] self-center bg-[#E50914] text-white text-xl px-5 py-3 flex items-center justify-center gap-4"
-        >
-          Get Started
-          <span>
-            <img class="w-[8px]" src="/assets/images/right-arrow.svg" />
-          </span>
-        </button>
-      </div>
+              <div>
+                <mat-icon *ngIf="!panelOpenState">add</mat-icon>
+                <mat-icon *ngIf="panelOpenState">remove</mat-icon>
+              </div>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p class="text-lg py-[40px] break-line">{{ faq.ans }}</p>
+      </mat-expansion-panel>
+    </mat-accordion>
+    <p class="self-center text-center w-[70%]">
+      Ready to watch? Enter your email to create or restart your membership.
+    </p>
+    <div class="flex w-full flex-col gap-5 mb-[40px] items-center">
+      <input
+        class="px-3 py-4 text-lg text-black w-[90%]"
+        type="email"
+        placeholder="Email address"
+      />
+      <button
+        class="rounded-[3px] self-center bg-[#E50914] text-white text-xl px-5 py-3 flex items-center justify-center gap-4"
+      >
+        Get Started
+        <span>
+          <img class="w-[8px]" src="/assets/images/right-arrow.svg" />
+        </span>
+      </button>
     </div>
+  </div>
 
-    <div class="flex flex-col gap-10 feat-div contact-div">
-      <p class="text-base">Questions? Contact us.</p>
-      <div class="grid grid-cols-2 gap-x-20 gap-y-2">
-        <p>FAQ</p>
-        <p>Help Center</p>
-        <p>Account</p>
-        <p>Media Center</p>
-        <p>Investor Relations</p>
-        <p>Jobs</p>
-        <p>Redeem Gift Cards</p>
-        <p>Buy Gift Cards</p>
-        <p>Ways to Watch</p>
-        <p>Terms of Use</p>
-        <p>Privacy</p>
-        <p>Cookie Preferences</p>
-        <p>Corporate Information</p>
-        <p>Contact Us</p>
-        <p>Speed Test</p>
-        <p>Legal Notices</p>
-        <p>Only on Netflix</p>
-      </div>
+  <div class="flex flex-col gap-10 feat-div contact-div">
+    <p class="text-base">Questions? Contact us.</p>
+    <div class="grid grid-cols-2 gap-x-20 gap-y-2">
+      <p>FAQ</p>
+      <p>Help Center</p>
+      <p>Account</p>
+      <p>Media Center</p>
+      <p>Investor Relations</p>
+      <p>Jobs</p>
+      <p>Redeem Gift Cards</p>
+      <p>Buy Gift Cards</p>
+      <p>Ways to Watch</p>
+      <p>Terms of Use</p>
+      <p>Privacy</p>
+      <p>Cookie Preferences</p>
+      <p>Corporate Information</p>
+      <p>Contact Us</p>
+      <p>Speed Test</p>
+      <p>Legal Notices</p>
+      <p>Only on Netflix</p>
     </div>
+  </div>
 </main>
