--- a/src/app/landing-page/landing/landing.component.html
+++ b/src/app/landing-page/landing/landing.component.html
@@ -94,7 +94,7 @@
         <mat-expansion-panel-header class="header">
           <mat-panel-title class="flex justify-between items-center gap-5">
               <p class="text-lg">{{ faq.question }}</p>
-              <div>
+              <div class="flex">
                 <mat-icon *ngIf="!panelOpenState">add</mat-icon>
                 <mat-icon *ngIf="panelOpenState">remove</mat-icon>
               </div>
