--- a/src/app/landing-page/landing/landing.component.html
+++ b/src/app/landing-page/landing/landing.component.html
@@ -2,7 +2,7 @@
   <div class="bg-div py-[32px] px-[25px] sm:px-[50px] text-white">
     <div class="nav flex justify-between items-center">
       <img class="w-[80px] sm:w-[100px] lg:w-[150px]" src="/assets/images/netflix-logo.svg" />
-      <button class="rounded-[3px] bg-[#E50914] text-white px-5 py-[8px]">
+      <button class="rounded-[3px] bg-[#E50914] text-white px-2 sm:px-5 py-[4px] sm:py-[8px]">
         Sign In
       </button>
     </div>
